--- a/circleDetection.html
+++ b/circleDetection.html
@@ -15,6 +15,23 @@
     <script src="circleDetection.js"></script>
     <body onresize="windowResized()" onload="enable(0)">
         <div id = "contentContainer">
+            <div id="iconHold">
+                <image id="icon" src="icon.png"></image>
+                <div>Hammond Kai</div>
+            </div>
+            <button id="tableButton">≡ TABLE OF CONTENTS</button>
+            <div id="tableContents">
+                <a href="intro.html"><button>Intro</button></a>
+                <a href="circle.html"><button>Circles</button></a>
+                <span>
+                    <a href="circleClass.html"><button>Class</button></a>
+                    <a href="circleDetection.html"><button>Detection</button></a>
+                    <a href="circleImpulse.html"><button>Response Pt.1</button></a>
+                    <a href="circleImpulse2.html"><button>Response Pt.2</button></a>
+                    <a href="circleImpulse3.html"><button>Response Pt.3</button></a>
+                    <a href="circleImpulse4.html"><button>Response Pt.4</button></a>
+                </span>
+            </div>
             <header>
                 <span id="back"><a href="circleClass.html">←</a></span>
                 <span id="title"><a href="">CH.1 CIRCLES</a></span>
@@ -60,7 +77,7 @@
             <pre><code>def circleCircle(c1, c2):
     # Return the truth value of
     # distance <= sum of radii
-    return dist(c1, c2) <= c1.radius + c2.radius</code></pre>
+    return dist(c1, c2) <= c1.r + c2.r</code></pre>
 
             <p>The bit of shorthand after the return statement just returns the truth value of 
                 <code>distance <= sum of radii</code> and makes the code much more readable than if we used an <code>
@@ -107,15 +124,15 @@ def draw():
     # Draw circle controlled by mouse
     fill(50, 150)
     c1.draw()</code><code>class circleCollider:
-    def __init__(self, x, y, radius):
+    def __init__(self, x, y, r):
         # Store circle attributes
         self.x = x
         self.y = y
-        self.radius = radius
+        self.r = r
 
     def draw(self):
         # Draw the circle
-        circle(self.x, self.y, self.radius * 2)
+        circle(self.x, self.y, self.r * 2)
 
 
 def dist(p1, p2):
@@ -130,7 +147,7 @@ def dist(p1, p2):
 def circleCircle(c1, c2):
     # Return the truth value of
     # distance <= sum of radii
-    return dist(c1, c2) <= c1.radius + c2.radius</code></pre>
+    return dist(c1, c2) <= c1.r + c2.r</code></pre>
             </div>
         </div>
     </body>
