--- a/circleImpulse.html
+++ b/circleImpulse.html
@@ -15,6 +15,23 @@
     <script src="circleImpulse.js"></script>
     <body onresize="windowResized()" onload="enable(0)">
         <div id = "contentContainer">
+            <div id="iconHold">
+                <image id="icon" src="icon.png"></image>
+                <div>Hammond Kai</div>
+            </div>
+            <button id="tableButton">≡ TABLE OF CONTENTS</button>
+            <div id="tableContents">
+                <a href="intro.html"><button>Intro</button></a>
+                <a href="circle.html"><button>Circles</button></a>
+                <span>
+                    <a href="circleClass.html"><button>Class</button></a>
+                    <a href="circleDetection.html"><button>Detection</button></a>
+                    <a href="circleImpulse.html"><button>Response Pt.1</button></a>
+                    <a href="circleImpulse2.html"><button>Response Pt.2</button></a>
+                    <a href="circleImpulse3.html"><button>Response Pt.3</button></a>
+                    <a href="circleImpulse4.html"><button>Response Pt.4</button></a>
+                </span>
+            </div>
             <header>
                 <span id="back"><a href="circleDetection.html">←</a></span>
                 <span id="title"><a href="">CH.1 CIRCLES</a></span>
@@ -35,7 +52,7 @@
 
             <pre><code>self.velx = velx
 self.vely = vely
-self.mass = radius</code></pre>
+self.mass = r</code></pre>
 
             <p>This is important because we need to know the velocity of each circle to know how other circles should
                 react to it. Also remember that the circle class needs to be able to accept two extra inputs
@@ -55,12 +72,12 @@ circleArr = []</code></pre>
     # Set random attributes
     x = random(width)
     y = random(height)
-    radius = random(5, 50)
+    r = random(5, 50)
     velx = random(-5, 5)
     vely = random(-5, 5)
 
     # Append circle to array
-    circleArr.append(circleCollider(x, y, radius, velx, vely))</code></pre>
+    circleArr.append(circleCollider(x, y, r, velx, vely))</code></pre>
             <p>
                 If you did this, you probably received an undefined variable error and that is because we need to 
                 modify the contents of the <code>draw()</code> function.
@@ -97,12 +114,12 @@ def setup():
         # Set random attributes
         x = random(width)
         y = random(height)
-        radius = random(5, 50)
+        r = random(5, 50)
         velx = random(-5, 5)
         vely = random(-5, 5)
 
         # Append circle to array
-        circleArr.append(circleCollider(x, y, radius, velx, vely))
+        circleArr.append(circleCollider(x, y, r, velx, vely))
 
 
 def draw():
@@ -112,18 +129,18 @@ def draw():
     fill(230, 240, 225)
     for i in circleArr:
         i.draw()</code><code>class circleCollider:
-    def __init__(self, x, y, radius, velx, vely):
+    def __init__(self, x, y, r, velx, vely):
         # Store circle attributes
         self.x = x
         self.y = y
-        self.radius = radius
+        self.r = r
         self.velx = velx
         self.vely = vely
-        self.mass = radius
+        self.mass = r
 
     def draw(self):
         # Draw the circle
-        circle(self.x, self.y, self.radius * 2)
+        circle(self.x, self.y, self.r * 2)
 
 
 def dist(p1, p2):
@@ -138,7 +155,7 @@ def dist(p1, p2):
 def circleCircle(c1, c2):
     # Return the truth value of
     # distance <= sum of radii
-    return dist(c1, c2) <= c1.radius + c2.radius</code></pre>
+    return dist(c1, c2) <= c1.r + c2.r</code></pre>
             </div>
         </div>
     </body>
