--- a/circleImpulse3.html
+++ b/circleImpulse3.html
@@ -16,8 +16,10 @@
     <body onresize="windowResized()" onload="enable(0)">
         <div id = "contentContainer">
             <div id="iconHold">
+                <a href="index.html"><button>
                 <image id="icon" src="icon.png"></image>
                 <div>Hammond Kai</div>
+                </button></a>
             </div>
             <button id="tableButton">≡ TABLE OF CONTENTS</button>
             <div id="tableContents">
