--- a/circle.html
+++ b/circle.html
@@ -21,7 +21,7 @@
     <script src="resizeFunct.js"></script>
     <script src="drawFuncts.js"></script>
     <script src="circleObject.js"></script>
-    <script src="circleImpulse4.js"></script>
+    <script src="circle.js"></script>
     <body onresize="windowResized()" onload="enable(0)">
         <div id = "contentContainer">
             <div id="iconHold">
