--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                     <div>Physics<br> Engine<br> Tutorial</div>
                     <img src="physics.png">
                 </a>
+                <a href="pythag.html">
+                        <div>Nerdy<br>Math<br>Stuff</div>
+                        <img src="physics.png">
+                </a>
             </div>
             <div id="Projects">
 
