--- a/circleClass.html
+++ b/circleClass.html
@@ -60,83 +60,145 @@
             <p>Classes are essential in keeping the code free of clutter and easy to modify. 
                 Without them we will have to resort to creating many variables which will quickly render the code unreadable.
             </p>
-            <p>To begin, we will have the circle class store the circle's position and radius like so:</p>
+            <p>To begin, we will create a <code>rigidBody</code> class that will store its gravity and velocity
+                and its <code>update()</code> function will update its velocity and update
+                the position of its parent:</p>
+        <pre><code>class rigidBody {
+        constructor(gravity) {
+                this.gravity = gravity;
+                this.vel = createVector(0, 0);
+        }
 
-            <pre><code>class circleCollider:
-    def __init__(self, x, y, r):
-        # Store circle attributes
-        self.x = x
-        self.y = y
-        self.r = r</code></pre>
+        update(parent){
+                // Accelerate rigidBody with gravity
+                this.vel.add(this.gravity);
 
-            <p>Keep in mind that we will add more variables and functions to this class in the future when necessary.</p>
-            <p>The first function that we will add to the circle class is the draw function that we will use to visualize
-                the circle. The class should now look like this:</p>
+                // Update parent position with velocity
+                parent.pos.add(this.vel);
+        }
+}</code></pre>
+            <p>Next we will create the parent class of the <code>rigidBody</code> called the <code>gameObject</code> 
+                 that will store its position, radius, and <code>rigidBody</code>. 
+                It also has an <code>update()</code> function
+                to update the <code>rigidBody</code> and a <code>draw()</code> 
+                function that will draw our gameObject as a circle:</p>
+            <pre><code>class gameObject {
+        constructor(pos, r, rigidBody) {
+                this.pos = pos;
+                this.r = r;
+                this.rigidBody = rigidBody;
+        }
 
-            <pre><code>class circleCollider:
-    def __init__(self, x, y, r):
-        # Store circle attributes
-        self.x = x
-        self.y = y
-        self.r = r
+        update(){
+                // Update rigidBody
+                this.rigidBody.update(this);
+        }
 
-    def draw(self):
-        # Draw the circle
-        circle(self.x, self.y, self.r * 2)</code></pre>
+        draw() {
+                // Draw gameObject as circle
+                circle(this.pos.x, this.pos.y, this.r * 2);
+        }
+}</code></pre>
+</p>
+<p>We multiply the radius by 2 in the <code>draw()</code> function because the function <code>circle()</code> takes in diameter.</p>
 
-            <p>We will now create two circles and set their position and radius.
-            </p>
 
-            <pre><code># Create two circles
-c1 = circleCollider(0, 0, 20)
-c2 = circleCollider(300, 200, 100)</code></pre>
+<p>Now let's create two gameObjects in <code>setup()</code>:
+</p>
 
-            <p>
-                Now we will set the first circle's position to the mouse position and draw the circles onto the screen, 
-                giving us our final code:
-            </p>
+<pre><code>// Create two gameObjects
+pos = createVector(0, 0);
+c1 = new gameObject(pos, 20);
+
+pos = createVector(400, 0);
+gravity = createVector(0, 0.01);
+c2rigidBody = new rigidBody(gravity);
+c2 = new gameObject(pos, 100, c2rigidBody);
+</code></pre>
+<p>Finally lets update the position of <code>c1</code> to the mouse position and update the 
+position of <code>c2</code> with its <code>rigidBody</code>:
+</p>
+        <pre><code>function draw() {
+        background(200, 220, 230);
+
+        // Update gameObject positions
+        c1.pos.set(mouseX, mouseY);
+        c2.update();
+
+        // Draw gameObjects
+        fill(230, 240, 225);
+        c2.draw();
+        fill(50, 150);
+        c1.draw();
+}</code></pre>
+<p>We now have a circle following the mouse and a circle falling from the sky. This is the final code:</p>
+
             <div class="codeHolder">
             <div class="buttonHolder">
-                <button>PhysicsEngine.py</button>
-                <button>CircleClass.py</button>
+                <button>sketch.js</button>
+                <button>class.js</button>
             </div>
-            <pre><code>from CircleClass import*
+            <pre><code>function setup() {
+        resizeCanvas(800, 400);
+        pixelDensity(displayDensity());
+
+        strokeWeight(2);
+        
+        // Create two gameObjects
+        pos = createVector(0, 0);
+        c1 = new gameObject(pos, 20);
+
+        pos = createVector(400, 0);
+        gravity = createVector(0, 0.01);
+        c2rigidBody = new rigidBody(gravity);
+        c2 = new gameObject(pos, 100, c2rigidBody);
+}
 
 
-# Create two circles
-c1 = circleCollider(0, 0, 20)
-c2 = circleCollider(300, 200, 100)
+function draw() {
+        background(200, 220, 230);
 
+        // Update gameObject positions
+        c1.pos.set(mouseX, mouseY);
+        c2.update();
 
-def setup():
-    size(600, 400)
-    pixelDensity(displayDensity())
+        // Draw gameObjects
+        fill(230, 240, 225);
+        c2.draw();
+        fill(50, 150);
+        c1.draw();
+}</code><code>class gameObject {
+        constructor(pos, r, rigidBody) {
+                this.pos = pos;
+                this.r = r;
+                this.rigidBody = rigidBody;
+        }
 
-    strokeWeight(2)
+        update(){
+                // Update rigidBody
+                this.rigidBody.update(this);
+        }
 
+        draw() {
+                // Draw gameObject as circle
+                circle(this.pos.x, this.pos.y, this.r * 2);
+        }
+}
 
-def draw():
-    background(200, 220, 230)
+class rigidBody {
+        constructor(gravity) {
+                this.gravity = gravity;
+                this.vel = createVector(0, 0);
+        }
 
-    # Set one circle's position to mouse position
-    c1.x, c1.y = mouseX, mouseY
+        update(parent){
+                // Accelerate rigidBody with gravity
+                this.vel.add(this.gravity);
 
-    # Draw center circle
-    fill(230, 240, 225)
-    c2.draw()
-
-    # Draw circle controlled by mouse
-    fill(50, 150)
-    c1.draw()</code><code>class circleCollider:
-    def __init__(self, x, y, r):
-        # Store circle attributes
-        self.x = x
-        self.y = y
-        self.r = r
-
-    def draw(self):
-        # Draw the circle
-        circle(self.x, self.y, self.r * 2)</code></pre>
+                // Update parent position with velocity
+                parent.pos.add(this.vel);
+        }
+}</code></pre>
         </div>
     </body>
     <script src="main.js"></script>
